<resources>
    <string name="app_name">TBOX</string>

    <!-- Bottom Sheet !-->
    <string name="botton_navi_home">HOME</string>
    <string name="bottom_navi_favorite">LIKE</string>
    <string name="bottom_navi_stream_add">STREAM</string>
    <string name="bottom_navi_user">ME</string>
    <string name="bottom_navi_setting">SETTING</string>

    <!-- 메인 화면 !-->
    <string name="realtimeUp">HOT</string>

    <!-- SETTINGS !-->
    <string name="myAccount">내 계정</string>
    <string name="logout">로그아웃</string>
    <string name="changeInfo">정보 변경</string>
    <string name="mobileWallet">모바일 지갑</string>
    <string name="walletScript">이더리움 계정에 연결합니다</string>
    <string name="alert">알림</string>
    <string name="broadcat_alert">방송 알림</string>
    <string name="alert_descript">북마크한 방송 알림을 켜고 끕니다</string>
    <string name="chart">통계</string>
    <string name="monthChart">시청자 통계</string>
    <string name="chart_descript">년, 월, 일별 시청자 통계를 보여줍니다</string>
    <string name="place">길찾기</string>
    <string name="tmap">경로</string>
    <string name="tmap_descript">Tmap 을 이용하여 경로를 찾습니다</string>
    <string name="cameraTitle">카메라</string>
    <string name="faceDetection_title">사진 찍기</string>
    <string name="faceDetection_descript">사진을 찍고 꾸며서 친구들과 공유해보세요</string>
    <string name="arMap">AR 길찾기</string>
    <string name="arMap_descript">AR 을 이용하여 방향을 표시합니다</string>
    <string name="arExperienceTitle">AR 체험하기</string>
    <string name="drawingLine">Drawing Line</string>
    <string name="arPortalTitle">Portal</string>
    <string name="runPenguTitle">3D 게임</string>
    <string name="runPengu_descript">간단한 3D 게임을 체험해보세요</string>

    <!-- 로그인 유저 타임라인 !-->
    <string name="myVideo">MY 비디오</string>
    <string name="noLivelist">방송 목록이 없습니다</string>
    <string name="myVod">영상</string>
    <string name="noMyvod">추가한 영상이 없습니다</string>
    <string name="uploadCount">게시물</string>
    <string name="followerCount">팔로워</string>
    <string name="followingCount">팔로잉</string>

    <!-- 통계 !-->
    <string name="total">Total</string>
    <string name="genderTitle">남녀 비율</string>
    <string name="dayChart">연령별 통계</string>
    <string name="monthlyChart">일별 통계</string>
    <string name="dayChartAxisX">시청자수</string>
    <string name="dayTitle">DAY</string>

    <!-- 길찾기 !-->
    <string name="mapSearchHint">장소 검색</string>
    <string name="startSet">출발</string>
    <string name="endSet">도착</string>
    <string name="startSetText">출발지 설정</string>
    <string name="endSetText">도착지 설정</string>

    <!-- OtherUser 타임라인 !-->
    <string name="privateTitle">비공개 영상입니다</string>

    <!-- AR : Drawing Line !-->
    <string name="Drawing_plane">HighLight</string>
    <string name="LineWidth">Brush select</string>
    <string name="DistanceScale">Distance Scale</string>
    <string name="Smoothing">Smoothing</string>
    <string name="LineColors">Colors</string>

    <!-- 얼굴 인식 !-->
    <string name="CameraPermissionScript">카메라 접근 권한이 필요합니다</string>
    <string name="PermissionOK">OK</string>
    <string name="LowStorageError">저장 공간이 부족합니다</string>
    <string name="SaveImageDone">사진이 저장되었습니다</string>
    <string name="SaveImageAlert">사진 저장을 취소하시겠습니까?</string>

</resources>
